--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -190,6 +190,7 @@ container_bundle(
         # cmd images
         "$(container_prefix)/$(image_prefix)sidecar-shim:$(container_tag)": "//cmd/sidecars:sidecar-shim-image",
         "$(container_prefix)/$(image_prefix)example-hook-sidecar:$(container_tag)": "//cmd/example-hook-sidecar:example-hook-sidecar-image",
+        "$(container_prefix)/$(image_prefix)example-hook-generic:$(container_tag)": "//cmd/example-hook-generic:example-hook-generic-image",
         "$(container_prefix)/$(image_prefix)example-disk-mutation-hook-sidecar:$(container_tag)": "//cmd/example-disk-mutation-hook-sidecar:example-disk-mutation-hook-sidecar-image",
         "$(container_prefix)/$(image_prefix)example-cloudinit-hook-sidecar:$(container_tag)": "//cmd/example-cloudinit-hook-sidecar:example-cloudinit-hook-sidecar-image",
         "$(container_prefix)/$(image_prefix)network-slirp-binding:$(container_tag)": "//cmd/network-slirp-binding:network-slirp-binding-image",
@@ -345,6 +346,15 @@ container_push(
     image = "//cmd/example-hook-sidecar:example-hook-sidecar-image",
     registry = "$(container_prefix)",
     repository = "$(image_prefix)example-hook-sidecar",
+    tag = "$(container_tag)",
+)
+
+container_push(
+    name = "push-example-hook-generic",
+    format = "Docker",
+    image = "//cmd/example-hook-generic:example-hook-generic-image",
+    registry = "$(container_prefix)",
+    repository = "$(image_prefix)example-hook-generic",
     tag = "$(container_tag)",
 )
 
