Add python script example
Signed-off-by: Dharmit Shah <shahdharmit@gmail.com>

--- a/rpm/BUILD.bazel
+++ b/rpm/BUILD.bazel
@@ -1019,6 +1019,10 @@ rpmtree(
         "@popt-0__1.18-8.el9.x86_64//rpm",
         "@psmisc-0__23.4-3.el9.x86_64//rpm",
         "@publicsuffix-list-dafsa-0__20210518-3.el9.x86_64//rpm",
+        "@python3-0__3.9.17-2.el9.x86_64//rpm",
+        "@python3-libs-0__3.9.17-2.el9.x86_64//rpm",
+        "@python3-pip-wheel-0__21.2.3-7.el9.x86_64//rpm",
+        "@python3-setuptools-wheel-0__53.0.0-12.el9.x86_64//rpm",
         "@qemu-img-17__8.0.0-13.el9.x86_64//rpm",
         "@qemu-kvm-common-17__8.0.0-13.el9.x86_64//rpm",
         "@qemu-kvm-core-17__8.0.0-13.el9.x86_64//rpm",
@@ -1059,6 +1063,9 @@ rpmtree(
         "/var/run": "../run",
         "/usr/bin/qemu-kvm": "/usr/libexec/qemu-kvm",
         "/etc/ssl/certs/ca-certificates.crt": "/usr/share/pki/ca-trust-source/ca-bundle.trust.p11-kit",
+        "/usr/bin/python": "/usr/bin/python3.9",
+        "/usr/bin/python3": "/usr/bin/python3.9",
+        "/usr/bin/ld": "/usr/bin/ld.bfd",
     },
     visibility = ["//visibility:public"],
 )
