Create rpmtree for generic sidecar
Signed-off-by: Dharmit Shah <shahdharmit@gmail.com>

--- a/cmd/example-hook-generic/BUILD.bazel
+++ b/cmd/example-hook-generic/BUILD.bazel
@@ -32,7 +32,7 @@ container_image(
     directory = "/",
     files = ["//:get-version"],
     tars = [
-        "//rpm:libguestfs-tools",  # TODO: prepare our own layer with bash instead of using this
+        "//rpm:generic-sidecar",
     ],
 )
 
