--- a/cmd/sidecars/BUILD.bazel
+++ b/cmd/sidecars/BUILD.bazel
@@ -40,5 +40,8 @@ container_image(
     directory = "/",
     entrypoint = ["/sidecar-shim"],
     files = [":sidecar-shim"],
+    tars = [
+        "//rpm:generic-sidecar",
+    ],
     visibility = ["//visibility:public"],
 )
